# hyperlinklaw

./: .env.production.example  CONTRACTOR-SETUP.md  DEPLOYMENT_GUIDE.md  README_FERRANTE_BLUEPRINT.md  app.py  package-lock.json  package.json  parallel_ocr_console_test.js  parallel_ocr_verification.sql  playwright.config.ts  pyproject.toml  sample_exhibits.sql  test-edit.html  test_exhibit_generation.js  vite.config.prod.ts  vitest.config.ts  ync function handler(req, res) {
apps/web/: index.html  package-lock.json  (+2 more)
client/: index.html
config/: linking.json
data/: index_map.json  review.html
e2e/: complete-workflow.spec.ts  workflow.test.ts
emergency_backup/: page_1_1757183186741.json  page_1_text.txt  page_78_1757188109366.json
gpu-worker/: Dockerfile  README.md  deploy-aws.sh  docker-compose.yml  requirements.txt  schema.sql  worker.py
public/: review-13.html  review-63.html  review-subrules.html
scripts/: build_master_and_link.py  build_tr_subrule13.py  build_tr_tabs_from_index.py  count_tabs.py  dynamic_hyperlink_processor.py  dynamic_index_detector.py  link_tabs_by_range.py  production-deploy.sh  relink_from_csv_13.py  relink_from_csv_63.py  relink_subrules.py
server/: chatgpt_resolver.py  deterministic_hyperlink_detector.py  ferrante_api.py  ferrante_blueprint.py  ferrante_detector.py  ferrante_pdf_builder.py  gpt5_hyperlink_resolver.d.ts  gpt5_hyperlink_resolver.js  hyperlinkDetection.ts  index.ts  indexExtractor.ts  instant_processor.py  objectStorage.ts  replitAuth.ts  routes.ts  routes.ts.backup  storage.ts
shared/: schema.ts
test/: setup.ts
(+204 files in other folders)
